# GammaSpectrometer

./: .gitattributes  README.md
.github/workflows/: docs-generation.yml  static-code-analysis.yml
ContinousIntegration/: .gitignore  run_python_static_code_analysis.sh
ContinuousIntegration/: run_generate_docs.sh  run_python_static_code_analysis.sh
Documentation/Diagrams/: ArchitectureDataAcquisition.tex  ArchitectureHighVoltagePowerSupply.tex  ArchitectureOverview.tex  StateDiagram.plantuml  UseCaseDiagram.plantuml
Documentation/Renders/: WholeDevice.blend
Documentation/UML/: README.md  SoftwareArchitecture.xmi
Hardware/: .gitignore  README.md
Hardware/DataAcquisition/: Amplifier.sch  ContinuousMode.sch  DataAcquisition-cache.lib  DataAcquisition.dcm  DataAcquisition.kicad_pcb  DataAcquisition.lib  DataAcquisition.sch  DataAcquisition.sch_OLD  DataProcessing.sch  Mechanic.sch  PulseMode.sch  README.md  fp-lib-table  sym-lib-table
Hardware/GammaSpectrometer/: ContinuousMode.sch  DataAcquisition.kicad_sch  DataAcquisition.sch  DataProcessing.sch  GammaSpectrometer-cache.lib  GammaSpectrometer-rescue.lib  GammaSpectrometer.dcm  (+18 more)
Simulation/: PulseModeAmplifier.asc  PulseModeAmplifier.plt
Software/: README.md
Software/Firmware/: CMakeLists.txt  doxygen.cfg  uncrustify.cfg
Software/Firmware/Inc/: ApplicationBuilder.h  BitHandler.h  ClockConfigurator.h  CommonDataTypes.h  Logger.h  MeasurementCollector.h  MeasurementFrame.h  PinoutConfiguration.h  TimerConfigurator.h  UserInterface.h  VoltageSensorActualValue.h  stm8s_conf.h  stm8s_it.h
Software/Firmware/STM8S_StdPeriph_Lib/inc/: stm8s.h  stm8s_awu.h
Software/Firmware/STM8S_StdPeriph_Lib/src/: stm8s_awu.c  stm8s_clk.c  stm8s_gpio.c  stm8s_i2c.c  stm8s_itc.c  stm8s_tim1.c  stm8s_uart1.c
Software/Firmware/Src/: ApplicationBuilder.c  ClockConfigurator.c  Logger.c  MeasurementCollector.c  MeasurementFrame.c  TimerConfigurator.c  UserInterface.c  VoltageSensorActualValue.c  main.c  stm8s_it.c
(+107 files in other folders)
